--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,19 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
+        <item name="colorPrimary">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+         <!-- sets cursor color -->
+        <!-- <item name="colorControlActivated">#FF4081</item> -->
+        <item name="colorControlActivated">#FFFFFF</item>
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+
     </style>
 
+     
 </resources>
+
+    
+
+  
+
