--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff9900</color>
+   <!-- <color name="colorPrimary">#ff9900</color>
     <color name="colorPrimaryDark">#ff9900</color>
+    <color name="white">#ffffff</color>  -->
+
+    <color name="colorPrimary">#2dc137</color>
+    <color name="colorPrimaryDark">#2dc137</color>
     <color name="white">#ffffff</color>
 </resources>
