--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorPrimary">#2dc137</color>
     <color name="colorPrimaryDark">#2dc137</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
