--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -7,10 +7,14 @@
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
          <!-- sets cursor color -->
+        <item name="android:windowIsTranslucent">true</item>
         <!-- <item name="colorControlActivated">#FF4081</item> -->
         <item name="colorControlActivated">#FFFFFF</item>
-        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
 
+    </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
      
